# annolid

./: .buildinfo  .codespell-ignore-words.txt  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.html  README.md  RELEASING.md  SECURITY.md  agent_background_services_tutorial.html  agent_clawhub_tutorial.html  agent_google_calendar_tutorial.html  agent_provider_setup.html  agent_tools.html  agent_tutorial.html  agent_whatsapp_tutorial.html  agent_zulip_tutorial.html  annolid.spec  citations_tutorial.html  dino_kpseg.html  environment.yml  environment_3.9.16_Ubuntu.yml  environment_dev.yml  environment_no_GPU.yml  extract_frames.html  faqs.html  genindex.html  guide.html  image_editing.html  index.html  index.md  install.html  install.ps1  (+22 more)
.annolid/cron/: jobs.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: CI.yml  annolid-publish.yml  book-pages.yml  docs-pages.yml  docs-portal-pages.yml  docs-quality.yml  healthonrails-site-sync.yml  release.yml  simulation-optional.yml  website-pages.yml
_modules/: index.html
_sources/: agent_background_services_tutorial.md.txt  agent_clawhub_tutorial.md.txt  agent_google_calendar_tutorial.md.txt  agent_provider_setup.md.txt  agent_tools.md.txt  agent_tutorial.md.txt  agent_whatsapp_tutorial.md.txt  agent_zulip_tutorial.md.txt  citations_tutorial.md.txt  dino_kpseg.md.txt  extract_frames.md.txt  faqs.md.txt  guide.rst.txt  image_editing.md.txt  index.rst.txt  install.md.txt  keypoints_definitions.md.txt  llm_key_security.md.txt  modules.rst.txt  read_pdf_with_ai_voice.md.txt  track_animals.md.txt  video_depth_anything.md.txt  yoloe_prompting.md.txt
_sources/_templates/: annolid.annotation.rst.txt  annolid.datasets.rst.txt  annolid.detector.YOLOv3.nms.ext.rst.txt  (+11 more)
_static/: documentation_options.js
_templates/: annolid.annotation.html  annolid.data.html  annolid.datasets.html  annolid.detector.YOLOv3.html  annolid.detector.YOLOv3.nms.ext.html  annolid.detector.YOLOv3.nms.html  annolid.detector.html  annolid.detector.yolov5.html  annolid.detector.yolov5.models.html  annolid.detector.yolov5.utils.html  annolid.gui.html  annolid.gui.widgets.html  annolid.html  annolid.postprocessing.html  annolid.segmentation.html  annolid.segmentation.yolact.data.html  annolid.segmentation.yolact.deep_sort.deep.html  annolid.segmentation.yolact.deep_sort.html  annolid.segmentation.yolact.deep_sort.sort.html  annolid.segmentation.yolact.html  annolid.segmentation.yolact.layers.functions.html  annolid.segmentation.yolact.layers.html  annolid.segmentation.yolact.layers.modules.html  annolid.segmentation.yolact.utils.html  annolid.tracker.features.html  annolid.tracker.html  annolid.utils.html
annolid/: features.py  main.py  version.py
book/: _config.yml  _toc.yml  genindex.html  objects.inv  requirements.txt  search.html  searchindex.js
content/: README.html  contributing.html  docker_container.html  extract_frames.html  get_in_touch.html  gui_or_cli.html  how_to_install.html  introduction.html  introduction_youtube.html  labelling_images.html  licence.html  save_labels.html  work_based_on_annolid.html
docker/: Dockerfile
docs/: CNAME  agent_and_automation.md  agent_annolid_run.md  agent_box.md  agent_calendar.md  agent_secrets.md  agent_security.md  agent_workspace.md  architecture_layers.md  atlas_overlay_workflow.md  behavior_agent_user_guide.md  brain_3d_reconstruction.md  coco_data_flow.md  codex_and_acp.md  cowtracker.md  deployment.md  dinov3_keypoint_tracking.md  getting_started.md  gui_decomposition_plan.md  identity_governor.md  index.md  install_with_uv.md  installation.md  large_image_guide.md  mcp.md  memory.md  migration.md  model_plugin_help.md  one_line_install_choices.md  operations.md  packaging.md  redirects.md  reference.md  requirements.txt  requirements_mkdocs.txt  sam3.md  sam3d.md  simulation_flybody.md  tapnext.md  tutorials.md  (+4 more)
docs_portal/: deployment.md  index.md  installation.md  migration.md  redirects.md  reference.md  tutorials.md  workflows.md
portal/: 404.html  index.html  sitemap.xml
scripts/: check_distribution_artifacts.py  check_flybody_runtime.py  export_memory.py  generate_two_mice_pose_dataset.py  migrate_memory.py  reembed_memory.py  release.sh  run_tcn_reproduction.py  setup_flybody_uv.sh  sync_book_build_to_site_root.sh  sync_docs_portal_to_site_root.sh  sync_docs_to_site_root.sh  sync_landing_page_to_site_root.sh  write_legacy_redirects.sh
tests/: conftest.py  test_affine_overlay_utils.py  test_agent_acp_bridge.py  test_agent_behavior_cli.py  test_agent_capabilities_dialog.py  test_agent_cli_results_store.py  test_agent_cli_workspace_cron_status.py  test_agent_memory_flush.py  test_agent_runner_ndjson_cli_integration.py  test_agent_skill_precedence.py  test_ai_chat_audio_controller.py  test_ai_chat_backend_ollama_messages.py  test_ai_chat_backend_sessions.py  test_ai_chat_backend_tool_calls.py  test_ai_chat_manager_cron.py  test_ai_chat_manager_startup.py  test_ai_chat_widget_slash_commands.py  test_ai_chat_zulip.py  test_ai_model_dropdown_prunes_missing_custom_yolo.py  test_ai_model_manager_phase4.py  test_annolid_config_loader.py  test_annotation_loading_zone_overlay.py  test_annotation_store.py  test_annotations.py  test_architecture_layers.py  test_audio_loader_selection_playback.py  test_audio_loader_video_ffmpeg.py  test_batch_relabel.py  test_bbox_iou_tracker.py  test_behavior_agent_agents.py  test_behavior_agent_artifacts.py  test_behavior_agent_evaluation.py  test_behavior_agent_imports.py  test_behavior_agent_orchestrator.py  test_behavior_agent_pipeline.py  test_behavior_agent_specialized_pipeline.py  test_behavior_describe_timeline_dialog.py  test_behavior_eval.py  test_behavior_event_utils.py  test_behavior_labels.py  (+385 more)
tutorials/: Annolid_on_Detectron2_Tutorial_2_Train_a_Model.html  Annolid_on_Detectron2_Tutorial_3_Evaluate_our_model.html  Annolid_on_Detectron2_Tutorial_4_Running_inference.html  Annolid_post_processing_distances.html
website/: index.html
(+1669 files in other folders)
