# pyproject.toml

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annolid"
version = "1.3.3"
authors = [
    { name = "Chen Yang", email = "healthonrails@gmail.com" },
]
description = "An annotation and instance segmentation-based multiple animal tracking and behavior analysis package."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    # Avoid NumPy 2 ABI breakage with compiled deps (e.g., scikit-image/labelme).
    'numpy>=1.24,<2.0',
    'scipy>=1.5.2',
    'easydict>=1.9',
    'opencv-contrib-python>=4.1.2.30',
    'PyYAML>=5.3',
    'labelme==5.5.0',
    'sounddevice>=0.4.6',
    'librosa>=0.10.1',
    'torch>=2.4.0',
    'torchvision>=0.19.0',
    'pandas>=1.1.3',
    'pycocotools>=2.0.2',
    'tensorboard>=2.3.0',
    'imageio>=2.8.0',
    'tqdm>=4.64.0',
    'shapely>=2.0.2',
    'imageio-ffmpeg>=0.4.2',
    'qimage2ndarray>=1.8',
    'tokenizers',
    'einops>=0.6',
    'omegaconf>=2.3.0',
    'hydra-core>=1.3.2',
    'timm>=0.9.7',
    'h5py>=3.10.0',
    'psutil>=5.9.8',
    'pyserial>=3.5',
    'pyzmq>=25.1.2',
    'ffpyplayer>=4.5.0',
    'tree-config>=0.6.0',
    # 'PyQt5==5.15.7',
    'Pillow>=9.3.0,<12.0',
    'chardet>=5.2.0',
    'transformers>=4.45.1',
    'ultralytics>=8.3.34',
    'huggingface-hub>=0.22.0',
    # Optional dependency: install SAM / SAM-HQ separately (see README.md).
]

[project.optional-dependencies]
sam3 = [
    "iopath>=0.1.9",
    "ftfy>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/healthonrails/annolid"
Repository = "https://github.com/healthonrails/annolid"

[project.scripts]
annolid = "annolid.gui.launcher:main"

[tool.setuptools.packages.find]
# This automatically finds your packages, same as setuptools.find_packages()
# By default it looks in the root directory. If you use a `src` layout,
# you would change this to: where = ["src"]
where = ["."]
include = ["annolid*"]
exclude = ["build*", "dist*", "docs*", "demo*", "tests*"]

[tool.setuptools.package-data]
annolid = [
    "**/*.js",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.gif",
    "**/*.svg",
    "**/*.ico",
    "**/*.icns",
    "**/*.qrc",
]
