# pyproject.toml

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "annolid"
version = "1.6.8"
authors = [
    { name = "Chen Yang", email = "healthonrails@gmail.com" },
]
description = "An annotation and instance segmentation-based multiple animal tracking and behavior analysis package."
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    # Avoid NumPy 2 ABI breakage with compiled deps.
    'numpy>=1.24',
    'numba>=0.60.0',
    'scipy>=1.5.2',
    'scikit-image>=0.20.0',
    'scikit-learn>=1.7.2',
    'easydict>=1.9',
    'gdown',
    'opencv-contrib-python>=4.1.2.30',
    'PyYAML>=5.3',
    'pandas>=1.1.3',
    'imgviz>=1.7.5',
    'imageio>=2.8.0',
    'tqdm>=4.64.0',
    'shapely>=2.0.2',
    'imageio-ffmpeg>=0.4.2',
    'qimage2ndarray>=1.8',
    'qtpy>=2.4.0',
    'h5py>=3.15.1',
    'psutil>=5.9.8',
    'tree-config>=0.6.0',
    'Pillow>=9.3.0,<12.0',
    'chardet>=5.2.0,<6.0.0',
    'jsonschema>=4.20.0',
    'pycocotools>=2.0.2',
    # Optional dependency: install SAM / SAM-HQ separately (see README.md).
]

[project.optional-dependencies]
gui = [
    # Default GUI binding. Code routes Qt access through qtpy for compatibility.
    "PySide6>=6.7.0",
]

test = [
    # Dependencies needed to import the full default test collection in CI.
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "matplotlib>=3.7.0",
    "pyzmq>=25.1.2",
    "tensorboard>=2.3.0",
    "openai>=1.40.0",
    "anthropic>=0.49.0",
    "croniter>=2.0.5",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.45.1",
    "huggingface-hub>=0.22.0",
    "onnxruntime>=1.23.2",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "pycocotools>=2.0.2",
    "einops>=0.6.0",
]

audio = [
    # Voice recording/playback and audio-feature extraction are optional.
    "sounddevice>=0.4.6",
    "librosa>=0.10.1",
]

ai_chat = [
    # Cloud/hosted LLM providers are optional; Ollama/local paths do not need these.
    "openai>=1.40.0",
    "anthropic>=0.49.0",
]

training = [
    # Training dashboards and projector workflows.
    "tensorboard>=2.3.0",
]

yolo = [
    # YOLO/YOLOE training and LabelMe export workflows.
    "ultralytics>=8.4.0",
    "lap",
]

ml = [
    # General ML/model runtime profile for inference, adapters, and model tooling.
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.45.1",
    "huggingface-hub>=0.22.0",
    "onnxruntime>=1.23.2",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "pycocotools>=2.0.2",
    "einops>=0.6.0",
]

cutie = [
    # Video object segmentation tracking runtime.
    "opencv-contrib-python>=4.1.2.30",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "Pillow>=9.3.0,<12.0",
    "pycocotools>=2.0.2",
    "einops>=0.6.0",
]

tracking = [
    # Common tracking workstation profile without cloud/bot integrations.
    "opencv-contrib-python>=4.1.2.30",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "Pillow>=9.3.0,<12.0",
    "pycocotools>=2.0.2",
    "einops>=0.6.0",
    "onnxruntime>=1.23.2",
    "ultralytics>=8.4.0",
    "lap",
]

realtime = [
    # Hardware/streaming control paths.
    "pyserial>=3.5",
    "pyzmq>=25.1.2",
]

onnx_gpu = [
    # Windows/Linux CUDA provider; installers still validate provider availability.
    "onnxruntime-gpu>=1.23.2",
]

large_image = [
    # Large TIFF / OME-TIFF metadata and streaming backends.
    "tifffile>=2024.8.30",
    "pyvips>=2.2.3",
    "openslide-python>=1.3.1",
]

sam3 = [
    "iopath>=0.1.9",
    "ftfy>=6.1.1",
    "tokenizers",
    "timm>=0.9.7",
]

image_editing = [
    "diffusers>=0.32.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
]

text_to_speech = [
    "pocket-tts>=1.0.0",
    "pymupdf",
    "sounddevice>=0.4.6",
    "librosa>=0.10.1",
]

qwen3_embedding = [
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
]

mediapipe = [
    "mediapipe>=0.10.0",
]

cowtracker = [
    # VGGT/CowTracker dependency used by the bundled third-party backend.
    "safetensors>=0.4.0",
]

remote_video = [
    # Optional network/remote video decoding path.
    'ffpyplayer>=4.5.0; python_version < "3.14"',
]

annolid_bot = [
    # Primary Annolid Bot bundle: channels + integrations.
    "openai>=1.40.0",
    "anthropic>=0.49.0",
    "croniter>=2.0.5",
    "scrapling>=0.2.96",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "playwright>=1.45.0",
    "qrcode>=7.4.2",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
]

bot = [
    # Full bot profile: hosted providers, channels/integrations, and memory.
    "openai>=1.40.0",
    "anthropic>=0.49.0",
    "croniter>=2.0.5",
    "scrapling>=0.2.96",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "playwright>=1.45.0",
    "qrcode>=7.4.2",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "lancedb>=0.6.0",
    "pyarrow>=14.0.1",
    "tantivy>=0.21.1",
]

memory = [
    # Vector DB and fast memory features
    "lancedb>=0.6.0",
    "pyarrow>=14.0.1",
    "tantivy>=0.21.1",
]

all = [
    "matplotlib>=3.7.0",
    "opencv-contrib-python>=4.1.2.30",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "onnxruntime>=1.23.2",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "Pillow>=9.3.0,<12.0",
    "pycocotools>=2.0.2",
    "einops>=0.6.0",
    "sounddevice>=0.4.6",
    "librosa>=0.10.1",
    "openai>=1.40.0",
    "anthropic>=0.49.0",
    "tensorboard>=2.3.0",
    "ultralytics>=8.4.0",
    "lap",
    "pyserial>=3.5",
    "pyzmq>=25.1.2",
    'ffpyplayer>=4.5.0; python_version < "3.14"',
    "tifffile>=2024.8.30",
    "pyvips>=2.2.3",
    "openslide-python>=1.3.1",
    "iopath>=0.1.9",
    "ftfy>=6.1.1",
    "tokenizers",
    "timm>=0.9.7",
    "diffusers>=0.32.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "pocket-tts>=1.0.0",
    "pymupdf",
    "huggingface-hub>=0.22.0",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "mediapipe>=0.10.0",
    "croniter>=2.0.5",
    "scrapling>=0.2.96",
    "mcp>=1.0.0",
    "websockets>=12.0",
    "playwright>=1.45.0",
    "qrcode>=7.4.2",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "lancedb>=0.6.0",
    "pyarrow>=14.0.1",
    "tantivy>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/healthonrails/annolid"
Repository = "https://github.com/healthonrails/annolid"

[project.scripts]
annolid = "annolid.gui.launcher:main"
annolid-run = "annolid.engine.cli:main"

[tool.setuptools.packages.find]
# This automatically finds your packages, same as setuptools.find_packages()
# By default it looks in the root directory. If you use a `src` layout,
# you would change this to: where = ["src"]
where = ["."]
include = ["annolid*"]
exclude = [
    "build*",
    "dist*",
    "docs*",
    "demo*",
    "tests*",
    "annolid.depth.checkpoints*",
    "annolid.detector.countgd.checkpoints*",
    "annolid.motion.weights*",
    "annolid.realtime.models*",
    "annolid.realtime.runs*",
    "annolid.segmentation.MEDIAR.weights*",
    "annolid.segmentation.SAM.segment-anything-2.SAM_2.egg-info*",
    "annolid.segmentation.SAM.segment-anything-2.checkpoints*",
    "annolid.segmentation.SAM.segment-anything-2.demo*",
    "annolid.segmentation.SAM.segment-anything-2.notebooks*",
    "annolid.segmentation.SAM.segment-anything-2.training*",
    "annolid.segmentation.cutie_vos.weights*",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
annolid = [
    "**/*.js",
    "**/*.png",
    "**/*.jpg",
    "**/*.jpeg",
    "**/*.gif",
    "**/*.svg",
    "**/*.ico",
    "**/*.icns",
    "**/*.qrc",
    "core/output/schema/*.json",
    "core/agent/skills/**/*.md",
    "core/agent/skills/**/*.sh",
    "core/agent/workspace/**/*.md",
    "core/agent/workspace/**/*.sh",
]

[tool.setuptools.exclude-package-data]
annolid = [
    "depth/checkpoints/**",
    "detector/countgd/checkpoints/**",
    "motion/weights/**",
    "realtime/models/**",
    "realtime/runs/**",
    "realtime/yolo11n*.mlpackage/**",
    "realtime/*openvino_model/**",
    "segmentation/MEDIAR/weights/**",
    "segmentation/SAM/segment-anything-2/.github/**",
    "segmentation/SAM/segment-anything-2/SAM_2.egg-info/**",
    "segmentation/SAM/segment-anything-2/checkpoints/**",
    "segmentation/SAM/segment-anything-2/demo/**",
    "segmentation/SAM/segment-anything-2/notebooks/**",
    "segmentation/SAM/segment-anything-2/training/**",
    "segmentation/cutie_vos/weights/**",
]

[tool.ruff]
# Keep linting focused on source code; tutorial notebooks are authored for
# interactive execution and intentionally violate several static rules.
extend-exclude = [
    "book/tutorials/*.ipynb",
    "docs/tutorials/*.ipynb",
    # Vendored external projects keep upstream style/structure.
    "annolid/detector/countgd/**",
    "annolid/segmentation/cutie_vos/**",
    "annolid/segmentation/SAM/**",
    "annolid/depth/video_depth_anything/**",
]
